--- a/Pipfile
+++ b/Pipfile
@@ -7,15 +7,9 @@ verify_ssl = true
 black = "==19.3b0"
 
 [packages]
-certifi = "==2017.11.5"
-matplotlib = "==2.1.0"
-numpy = "==1.13.3"
-pyparsing = "==2.2.0"
-python-dateutil = "==2.6.1"
-pytz = "==2017.3"
-six = "==1.11.0"
-tornado = "==4.5.2"
-Cycler = "==0.10.0"
+matplotlib = "==3.1.1"
+numpy = "==1.17.0"
+pandas = "==0.25.0"
 
 [requires]
 python_version = "3.7"
