--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,8 @@
 language: python
 python:
-  - "3.3"
-  - "3.4"
-  - "3.5"
-  - "3.5-dev"  # 3.5 development branch
-  - "3.6"
-  - "3.6-dev"  # 3.6 development branch
-  - "3.7-dev"  # 3.7 development branch
+  - "3.7"  # 3.7 development branch
 install:
-  - pip install -r requirements.txt
+  - pip install pipenv
+  - pipenv install --dev
 script:
-  - elastic_nets
-  - self_organizing_map
+  - sh run-test.sh
